[package]
name = "e10"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9" # REQUIRED VERSION
volatile = "0.2.6" # REQUIRED VERSION
x86_64 = "0.14.2" # try 0.14.10
spin = "0.5.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-timeout = 30
test-success-exit-code = 33         # (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false
