[package]
name = "e10"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = "abort"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"]} # REQUIRED VERSION
volatile = "0.2.6" # REQUIRED VERSION
x86_64 = "0.14.2" # try 0.14.10
spin = "0.5.2"
uart_16550 = "0.2.0" # serial access
pic8259 = "0.10.1" # interrupt handler, try 0.11.0
pc-keyboard = "0.7.0" # translates scancodes, try 0.8.0

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-timeout = 30
test-success-exit-code = 33         # (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false